# ambilight

./: Ambilight Test.mov  CMakeLists.txt  README.md  ambilight-mini.py  ambilight-python.py  ambilight-video.py  build.sh  pibuild.sh  pirunonstartup.sh  requirements.txt  testpicap.cpp  video.cpp  videoRPC.cpp  videoRPC.h
