cmake_minimum_required(VERSION 2.8)
SET(COMPILE_DEFINITIONS -Werror)
SET(CMAKE_BUILD_TYPE Debug)
find_package( OpenCV REQUIRED )
include_directories(/opt/vc/include)
include_directories(/opt/vc/include/interface/vcos/pthreads)
include_directories(/opt/vc/include/interface/vmcs_host)
include_directories(/opt/vc/include/interface/vmcs_host/linux)
include_directories("${PROJECT_SOURCE_DIR}/include")
link_directories(/opt/vc/lib)
link_directories(/opt/vc/src/hello_pi/libs/vgfont)
add_executable(video video.cpp PiCapture.cpp)
target_link_libraries(video mmal_core mmal_util mmal_vc_client bcm_host ${OpenCV_LIBS})
